@@ -8,18 +8,6 @@
 #endif
 
 /*--------------
-    bug 2591
-    inline definition with parameters not in registers
-	these parameters should not be allocated here
-    the corresponding external definition is in fwk/lib/extern1.c
-*/
-inline long bug2591 (long a, long b, long c)
-{
-  return a | b | c;
-}
-
-
-/*--------------
     bug 2450
 */
 
@@ -249,6 +237,17 @@ bug_2295 (void)
   ASSERT (x == 1);
   ASSERT (y == 1);
   ASSERT (z == 1);
+}
+
+/*--------------
+    bug 2591
+    inline definition with parameters not in registers
+	these parameters should not be allocated here
+    the corresponding external definition is in fwk/lib/extern1.c
+*/
+inline long bug_2591 (long a, long b, long c)
+{
+  return a | b | c;
 }
 
 /*--------------*/
